--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ main{
     padding-top: 110px;
 }
 
+hr{
+    display: none;
+}
+
 footer {
     background-color: var(--bg-footer);
     height: 100px;
