--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ main{
     flex-grow: 1;
     overflow: auto;
     background-color: var(--bg-main);
-    position: relative;
-    padding-top: 110px;
+    display: flex;
+    flex-direction: row;
 }
 
 hr{
@@ -34,7 +34,7 @@ hr{
 
 footer {
     background-color: var(--bg-footer);
-    height: 100px;
+    flex-basis: 100px;
     flex-shrink: 0;
     z-index: 1;
 }
@@ -60,13 +60,9 @@ footer {
 /*Sidebar*/
 
 .sidebar{
-    width: 70px;
+    flex-basis: 70px;
     background-color: var(--bg-sidebar);
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 100px;
-    z-index: 1;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -95,18 +91,18 @@ footer {
 
 
 .content{
-    max-width: calc(100% - 70px);
-    margin: 0 auto;
-    padding: 16px 0 16px 56px;
+    flex-grow: 1;
+    overflow: auto;
 }
 
 .header-content{
     height: 100px;
     background-color: red;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
+    margin-bottom: var(--spacing-m);
 }
 
 
