--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
-/* Sopra 500px */
+/* Sopra 529px */
 
-@media screen and (min-width: 501px) {
+@media screen and (min-width: 530px) {
 
     .sidebar{
         flex-basis: 250px;
@@ -38,4 +38,19 @@
         color: #b3b3b3;
     }
 
+    .album-soundtrack-album{
+        display: flex;
+        gap: var(--spacing-s);
+
+    }
+
+
+}
+
+/* Sopra 767px */
+
+@media screen and (min-width: 768px) {
+    .footer-icons{
+        flex-direction: row;
+    }
 }
