--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,6 +20,19 @@
         font-weight: bold;
     }
 
+    .sidebar .active::before{
+        display: block;
+        width: 2px;
+        height: 30px;
+        margin: auto -10px;
+        content: '';
+        background-color: var(--color-green);
+    }
+
+    .sidebar .active::after{
+        display: none;
+    }
+
     .sidebar ul li{
         align-items: center;
         gap: 16px;
@@ -63,7 +76,7 @@
 /* Sopra 990px */
 
 @media screen and (min-width: 991px) {
-    
+
     .fb-6{
         flex-basis: calc(100% / 6);
     }
