added sidebar playlist

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,7 +54,10 @@
     .album-soundtrack-album{
         display: flex;
         gap: var(--spacing-s);
+    }
 
+    .playlist{
+        display: block;
     }
 
 
