--- a/css/style.css
+++ b/css/style.css
@@ -126,10 +126,6 @@ figure{
 }
 
 
-
-
-
-
 /*Sidebar*/
 
 .sidebar{
@@ -138,7 +134,6 @@ figure{
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: var(--spacing-m);
 }
 
@@ -158,9 +153,14 @@ figure{
     flex-direction: column;
 }
 
-.sidebar ul:first-child{
+.sidebar div:first-child{
+    flex: 1;
+}
+
+.sidebar div:first-child ul{
     margin-bottom: var(--spacing-xl);
 }
+
 
 .sidebar ul li{
     margin-bottom: var(--spacing-m);
